feat: export reports and public replays (#14)
